--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "the-orchid",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
+  "proxy": "https://theorchid-production.up.railway.app/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
